// Code generated - DO NOT EDIT.
// This file is a generated protobuf definition and any manual changes will be lost.

syntax = "proto3";
package joetoken;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/joetoken";


message Approval {
	google.protobuf.Timestamp ts = 1;
	bytes owner = 2; 
	bytes spender = 3; 
	bytes value = 4; // uint256
}

message DelegateChanged {
	google.protobuf.Timestamp ts = 1;
	bytes delegator = 2; 
	bytes fromDelegate = 3; 
	bytes toDelegate = 4; 
}

message DelegateVotesChanged {
	google.protobuf.Timestamp ts = 1;
	bytes delegate = 2; 
	bytes previousBalance = 3; // uint256
	bytes newBalance = 4; // uint256
}

message OwnershipTransferred {
	google.protobuf.Timestamp ts = 1;
	bytes previousOwner = 2; 
	bytes newOwner = 3; 
}

message Transfer {
	google.protobuf.Timestamp ts = 1;
	bytes from = 2; 
	bytes to = 3; 
	bytes value = 4; // uint256
}
